Add some network analysis.

--- a/uber/UberRides.ipynb
+++ b/uber/UberRides.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c7d37fc9-757c-43ac-bd35-85001a9c6aab",
+   "execution_count": 38,
+   "id": "f02ccdf3-6a47-4341-9f7c-52101465cc40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,19 @@
     "import re\n",
     "import pandas as pd\n",
     "import csv\n",
-    "\n",
+    "import networkx as nx\n",
+    "import matplotlib.pyplot as plt\n",
+    "from collections import defaultdict\n",
+    "import scipy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c7d37fc9-757c-43ac-bd35-85001a9c6aab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class UberDriver:\n",
     "    def __init__(self):\n",
     "        # Download the cookies file by logging into the Uber Drivers page (https://drivers.uber.com/earnings/activities)\n",
@@ -266,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "f3a9f937-fd54-4205-841b-195e1b2fb0a6",
    "metadata": {},
    "outputs": [
@@ -289,7 +301,7 @@
        " 'status': 'COMPLETED'}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "bc753e16-1bdb-46d1-a4b2-6ae7cde57668",
    "metadata": {},
    "outputs": [],
@@ -340,6 +352,12 @@
     "        else:\n",
     "            if month > start_month or month < end_month or (month == start_month and day >= start_day) or (month == end_month and day <= end_day):\n",
     "                return season\n",
+    "\n",
+    "def extract_zipcode(address):\n",
+    "    zip_code_pattern = re.compile(r'\\b\\d{5}\\b')\n",
+    "    match = zip_code_pattern.search(address)\n",
+    "    if match:\n",
+    "        return match.group()\n",
     "\n",
     "cleaned_rides = []\n",
     "for ride in rides:\n",
@@ -394,6 +412,8 @@
     "    ride['earnings-surge'] = ride['earnings'] - ride['surge']\n",
     "    ride['earnings/second'] = ride['earnings'] / ride['duration']\n",
     "    ride['earnings/mile'] = ride['earnings'] / ride['distance']\n",
+    "    ride['pickup zipcode'] = extract_zipcode(ride['pickup address'])\n",
+    "    ride['dropoff zipcode'] = extract_zipcode(ride['dropoff address'])\n",
     "    del ride['status']\n",
     "    del ride['note']\n",
     "    enriched_rides.append(ride)"
@@ -401,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "b4727b85-c6fe-44a6-9c0a-e1b9bdbd3370",
    "metadata": {},
    "outputs": [
@@ -493,18 +513,18 @@
       "75%                                  NaN        13.09000         0.014067   \n",
       "max                                  NaN        92.86000         0.083681   \n",
       "\n",
-      "        earnings/mile  \n",
-      "count     2839.000000  \n",
-      "unique            NaN  \n",
-      "top               NaN  \n",
-      "freq              NaN  \n",
-      "mean         3.300924  \n",
-      "std          2.052076  \n",
-      "min          0.759401  \n",
-      "25%          2.031841  \n",
-      "50%          2.789189  \n",
-      "75%          3.891608  \n",
-      "max         23.333333  \n",
+      "        earnings/mile pickup zipcode dropoff zipcode  \n",
+      "count     2839.000000           2839            2838  \n",
+      "unique            NaN            104             118  \n",
+      "top               NaN          60647           60614  \n",
+      "freq              NaN            256             185  \n",
+      "mean         3.300924            NaN             NaN  \n",
+      "std          2.052076            NaN             NaN  \n",
+      "min          0.759401            NaN             NaN  \n",
+      "25%          2.031841            NaN             NaN  \n",
+      "50%          2.789189            NaN             NaN  \n",
+      "75%          3.891608            NaN             NaN  \n",
+      "max         23.333333            NaN             NaN  \n",
       "\n",
       "Count of None values per column:\n",
       " uuid                    0\n",
@@ -525,6 +545,8 @@
       "earnings-surge          0\n",
       "earnings/second         0\n",
       "earnings/mile           0\n",
+      "pickup zipcode          0\n",
+      "dropoff zipcode         1\n",
       "dtype: int64\n",
       "\n",
       "Additional Info:\n",
@@ -602,7 +624,33 @@
       " 'N Lincoln Ave, Chicago, IL 60613, US' ...\n",
       " 'S Oakley Blvd, Chicago, IL 60612-4230, US'\n",
       " 'N Halsted St, Chicago, IL 60657-2412, US'\n",
-      " 'N Elston Ave, Chicago, IL 60618-4324, US']\n"
+      " 'N Elston Ave, Chicago, IL 60618-4324, US']\n",
+      "Unique values in column 'pickup zipcode' (#104): ['60614' '60613' '60657' '60647' '60661' '60640' '60641' '60634' '60626'\n",
+      " '60625' '60622' '60201' '60091' '60712' '60610' '60607' '60654' '60618'\n",
+      " '60660' '60202' '60605' '60645' '60611' '60666' '60644' '60624' '60612'\n",
+      " '60155' '60093' '60045' '60616' '60076' '60608' '60603' '60620' '60615'\n",
+      " '60653' '60636' '60637' '60131' '60659' '60646' '60053' '60631' '60621'\n",
+      " '60606' '60409' '60501' '60629' '60402' '60804' '60638' '60164' '60523'\n",
+      " '60651' '60706' '60656' '60803' '60077' '60632' '60609' '60649' '60639'\n",
+      " '60016' '60707' '60630' '60714' '60546' '60601' '60160' '60176' '60089'\n",
+      " '60208' '60126' '60025' '60628' '60515' '60619' '60652' '60456' '60018'\n",
+      " '60642' '60534' '60104' '60062' '60120' '60623' '60602' '60068' '60604'\n",
+      " '46394' '60069' '60040' '60005' '60302' '60101' '60123' '60561' '60513'\n",
+      " '60130' '60304' '60305' '60106' '60203']\n",
+      "Unique values in column 'dropoff zipcode' (#118): ['60612' '60614' '60613' '60657' '60607' '60647' '60606' '60625' '60634'\n",
+      " '60641' '60630' '60618' '60642' '60645' '60201' '60610' '60616' '60611'\n",
+      " '60202' '60626' '60660' '60666' '60654' '60639' '60644' '60651' '60130'\n",
+      " '60148' '60093' '60091' '60045' '60203' '60076' '60208' '60640' '60615'\n",
+      " '60608' '60605' '60652' '60619' '60659' '60620' '60629' '60714' '60018'\n",
+      " '60077' '60068' '60637' '60632' '60409' '60501' '60402' '60638' '60603'\n",
+      " '60131' '60521' '60523' '60624' '60706' '60008' '60609' '60653' '60649'\n",
+      " '60646' '60631' '60126' '60804' '60601' '60622' '60661' '60707' '60160'\n",
+      " '60026' '60089' '60628' '06061' '60803' '60459' '60085' '60477' '60636'\n",
+      " '60621' '60176' '60546' '60513' '60162' '60453' '60062' '60602' '60643'\n",
+      " '60171' '60120' '60192' '60623' '60302' '60604' '60457' '60712' '60656'\n",
+      " '60004' '60007' '60155' '60301' '60617' '60069' '60056' '60181' '60123'\n",
+      " '60053' '60558' '60025' '60044' '60043' '60827' '60525' '60304' '60633'\n",
+      " '60305']\n"
      ]
     }
    ],
@@ -630,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "ef0f3196-b70b-4c39-a062-71676c724778",
    "metadata": {},
    "outputs": [],
@@ -648,8 +696,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "id": "cee64877-1560-42e4-b2b3-cff20941de59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zip codes I picked up from and never dropped off to: ['46394', '60005', '60016', '60040', '60101', '60104', '60106', '60164', '60456', '60515', '60534', '60561']\n",
+      "Zip codes I dropped off to and never picked up from: ['06061', '60004', '60007', '60008', '60026', '60043', '60044', '60056', '60085', '60148', '60162', '60171', '60181', '60192', '60301', '60453', '60457', '60459', '60477', '60521', '60525', '60558', '60617', '60633', '60643', '60827']\n",
+      "Zip codes that I've picked up from the most: ['60647']\n",
+      "Zip codes that I've dropped off to the most: ['60611']\n",
+      "Total number of zip codes picked up from or dropped off to: 130\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a defaultdict to store the edge weights (frequencies)\n",
+    "edge_weights = defaultdict(int)\n",
+    "\n",
+    "for ride in enriched_rides:\n",
+    "    pickup = ride['pickup zipcode']\n",
+    "    dropoff = ride['dropoff zipcode']\n",
+    "    if pickup is not None and dropoff is not None:\n",
+    "        edge_weights[(pickup, dropoff)] += 1\n",
+    "\n",
+    "# Create a directed graph\n",
+    "G = nx.DiGraph()\n",
+    "\n",
+    "# Add edges with weights\n",
+    "for (pickup, dropoff), weight in edge_weights.items():\n",
+    "    G.add_edge(pickup, dropoff, weight=weight)\n",
+    "\n",
+    "# Find zip codes that are never dropoffs (in-degree zero)\n",
+    "never_dropoff_zipcodes = sorted([node for node, in_degree in G.in_degree() if in_degree == 0])\n",
+    "\n",
+    "# Find zip codes that are never pickups (out-degree zero)\n",
+    "never_pickup_zipcodes = sorted([node for node, out_degree in G.out_degree() if out_degree == 0])\n",
+    "\n",
+    "# Calculate the in-degrees of all nodes\n",
+    "in_degrees = dict(G.in_degree())\n",
+    "out_degrees = dict(G.out_degree())\n",
+    "\n",
+    "# Find the maximum in-degree\n",
+    "max_in_degree = max(in_degrees.values())\n",
+    "max_out_degree = max(out_degrees.values())\n",
+    "\n",
+    "# Find zip codes with maximum in-degree (maximum dropoffs)\n",
+    "max_dropoff_zipcodes = [node for node, degree in in_degrees.items() if degree == max_in_degree]\n",
+    "\n",
+    "# Find zip codes with maximum out-degree (maximum pickups)\n",
+    "max_pickup_zipcodes = [node for node, degree in out_degrees.items() if degree == max_out_degree]\n",
+    "\n",
+    "print(\"Zip codes I picked up from and never dropped off to:\", never_dropoff_zipcodes)\n",
+    "print(\"Zip codes I dropped off to and never picked up from:\", never_pickup_zipcodes)\n",
+    "print(\"Zip codes that I've picked up from the most:\", max_pickup_zipcodes)\n",
+    "print(\"Zip codes that I've dropped off to the most:\", max_dropoff_zipcodes)\n",
+    "print(\"Total number of zip codes picked up from or dropped off to:\", len(G.nodes()))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b6a21127-6f0c-476d-93f8-10cb20923d94",
+   "id": "59bd4d18-1a3a-4f02-9130-b6793c2a2d8a",
    "metadata": {},
    "outputs": [],
    "source": []
